--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loja de carros</title>
+</head>
+<body>
+    <h1>Seja Bem Vindo ao nosso Site WebMotors!!!!</h1>
+    <h2>Logo abaixo vocês verão alguns carros que estão disponivel no nosso site a pronto entrega</h2>
+    <p>Em primeiro temos o Ford Mustang Hard Top V8 351 1969
+        Marca	Ford
+        Modelo	Mustang
+        Ano	1969
+        Cor	Vermelho
+        Portas	2
+        Motor	V8 347
+        Tipo de combustível	Gasolina
+        Quilômetros	74000 km
+        Transmissão	Automática
+        Versão	Hard Top</p>
 
+
+
+</body>
+</html>
