--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <h1>Seja Bem Vindo ao nosso Site WebMotors!!!!</h1>
     <h2>Logo abaixo vocês verão alguns carros que estão disponivel no nosso site a pronto entrega</h2>
     <p>Em primeiro temos o Ford Mustang Hard Top V8 351 1969
-        Marca	Ford
-        Modelo	Mustang
-        Ano	1969
-        Cor	Vermelho
-        Portas	2
-        Motor	V8 347
-        Tipo de combustível	Gasolina
-        Quilômetros	74000 km
-        Transmissão	Automática
-        Versão	Hard Top</p>
+       <BR> Marca:	Ford
+       <BR> Modelo:	Mustang
+       <BR> Ano:	1969
+       <BR> Cor:	Vermelho
+       <BR> Portas:	2
+       <BR> Motor:	V8 347
+       <BR> Tipo de combustível:	Gasolina
+       <BR> Quilômetros:	74000 km
+       <BR> Transmissão:	Automatico
+       <BR> Versão:	Hard Top</p>
+    <h4> Valor: R$:500.000,00 </h4>
 
 
 
