--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
        <BR> Quilômetros:	74000 km
        <BR> Transmissão:	Automatico
        <BR> Versão:	Hard Top</p>
+           <img src="1969-ford-mustang-hard-top-sao-paulo-a-venda-the-garage-1.wepd">
     <h4> Valor: R$:500.000,00 </h4>
 
 
