--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <BR> Quilômetros:	74000 km
        <BR> Transmissão:	Automatico
        <BR> Versão:	Hard Top</p>
-           <img src="Imagens3/1969-ford-mustang-hard-top-sao-paulo-a-venda-the-garage-1.wepd">
+           <img src="imagens3/mustang.jpg">
     <h4> Valor: R$:500.000,00 </h4>
 
 
