--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Seja Bem Vindo ao nosso Site WebMotors!!!!</h1>
     <h2>Logo abaixo vocês verão alguns carros que estão disponivel no nosso site a pronto entrega</h2>
     <p>Ford Mustang Hard Top V8 351 1969
-        <img src="imagens3 /mustang.jpg">
+        <img src="Imagens3/mustang.jpg">
        <BR> Marca:	Ford
        <BR> Modelo:	Mustang
        <BR> Ano:	1969
@@ -26,7 +26,7 @@
         <br>
       
     <p>Chevrolet Camaro Ss 1969
-        <img src="imagens3 /camaro.jpg">
+        <img src="Imagens3/camaro.jpg">
        <BR> Marca:	Chevrolet
        <BR> Modelo:	Camaro SS
        <BR> Ano: 1969	
